--- a/erp-frontend/package.json
+++ b/erp-frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
