--- a/erp-frontend/package.json
+++ b/erp-frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "axios": "^1.11.0",
     "daisyui": "^5.1.6",
     "vue": "^3.5.18",
