Fix login issues: resolve WebSocket errors and Express version compatibility
- Downgrade Express from 5.1.0 to 4.18.2 to fix path-to-regexp errors
- Fix token validation for demo users in authService
- Disable WebSocket connection to prevent JavaScript errors
- Add comprehensive logging for login debugging
- Update notification service to handle missing WebSocket URL gracefully

Fixes:
- Backend crashing with path-to-regexp error
- Login button not responding due to WebSocket connection failures
- Demo user authentication token validation
- Frontend JavaScript errors preventing form submission

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ services:
   backend:
     build: ./erp-backend
     ports:
-      - "5000:5000"
+      - "3000:3000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017/erp_db
+      - MONGODB_URI=mongodb://mongo:27017/erp_db
       - JWT_SECRET=supersecret
+      - NODE_ENV=production
     depends_on:
       - mongo
 
@@ -14,7 +15,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://backend:5000
+      - VITE_API_URL=http://backend:3000
     depends_on:
       - backend
 
