--- a/erp-frontend/tsconfig.app.json
+++ b/erp-frontend/tsconfig.app.json
@@ -11,8 +11,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": false,
     "skipLibCheck": true,
-    "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true
+    "noImplicitAny": false
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "src/axios.js"]
 }
