--- a/erp-frontend/Dockerfile
+++ b/erp-frontend/Dockerfile
@@ -3,6 +3,18 @@ FROM node:20 AS build
 
 WORKDIR /app
 
+# Accept build arguments for Vite environment variables
+ARG VITE_API_URL
+ARG VITE_GRAFANA_FARO_URL
+ARG VITE_GRAFANA_FARO_APP_NAME
+ARG VITE_GRAFANA_FARO_ENVIRONMENT
+
+# Set as environment variables for Vite build
+ENV VITE_API_URL=$VITE_API_URL
+ENV VITE_GRAFANA_FARO_URL=$VITE_GRAFANA_FARO_URL
+ENV VITE_GRAFANA_FARO_APP_NAME=$VITE_GRAFANA_FARO_APP_NAME
+ENV VITE_GRAFANA_FARO_ENVIRONMENT=$VITE_GRAFANA_FARO_ENVIRONMENT
+
 COPY package*.json ./
 RUN npm install
 
